[package]
name = "g29"
version = "0.1.0"
authors = ["Lahcen Boulbalah"]
edition = "2021"
description = "A library offering an interface for Logitech G29 wheel/pedal and force feedback control."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = "2.5.0"

