[package]
name = "g29"
version = "0.2.1"
authors = ["Lahcen Boulbalah"]
edition = "2021"
description = "A library offering an interface for Logitech G29 wheel/pedal and force feedback control."
repository = "https://github.com/misarb/g29rs/"
keywords = ["Logitech", "G29","Driver","ForceFeedback","control"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = "2.5.0"

